# ncnn-tnn-mnn-android-demo

./: README.md
ncnn-tnn-mnn-cv-android-camera/app/: build.gradle
ncnn-tnn-mnn-cv-android-camera/app/src/main/java/com/tencent/nanodetncnn/: FileUtils.java  MainActivity.java  NanoDetNcnn.java
ncnn-tnn-mnn-cv-android-camera/app/src/main/jni/: CMakeLists.txt  nanodetncnn.cpp
ncnn-tnn-mnn-cv-android-camera/app/src/main/jni/ncnn-20220721-android-vulkan/arm64-v8a/include/ncnn/: platform.h
ncnn-tnn-mnn-cv-android-camera/app/src/main/jni/ncnn-20220721-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
ncnn-tnn-mnn-cv-android-camera/app/src/main/jni/tnn-v0.3.0-android/include/tnn/: version.h
ncnn-tnn-mnn-cv-android-camera/app/src/main/res/values/: strings.xml
ncnn-tnn-mnn-cv-android-gallery/app/: build.gradle
ncnn-tnn-mnn-cv-android-gallery/app/src/main/java/com/tencent/styletransferncnn/: MainActivity.java
ncnn-tnn-mnn-cv-android-gallery/app/src/main/jni/: CMakeLists.txt  styletransferncnn_jni.cpp
ncnn-tnn-mnn-cv-android-gallery/app/src/main/res/layout/: main.xml
ncnn-tnn-mnn-cv-android-gallery/app/src/main/res/values/: strings.xml
